--- a/BatteryAlarm/res/layout/activity_main.xml
+++ b/BatteryAlarm/res/layout/activity_main.xml
@@ -2,57 +2,134 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_background"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <EditText
-        android:id="@+id/fieldPercentageAlarm"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linLayout"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:inputType="number"
-        android:text="@string/percentage_alarm" />
+        android:orientation="vertical" >
 
-    <Spinner
-        android:id="@+id/spinnerAccounts"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/fieldPercentageAlarm"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp" />
+        <TextView
+            style="@style/Header"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/string_connect_as" >
+        </TextView>
 
+        <Spinner
+            android:id="@+id/spinnerAccounts"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp">
+        </Spinner>
+        
+        <View
+            style="@style/InvisibleDivider"
+            android:layout_width="wrap_content" />
+        
+        <View style="@style/Divider"/>
+        
+        <View style="@style/InvisibleDivider" />
+                
+		<TextView
+            style="@style/Header"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/string_battery_level" >
+        </TextView>
+        
+		<View style="@style/InvisibleDivider" />
+		
+		<LinearLayout
+		    android:id="@+id/btrLvlLayout"
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:orientation="horizontal"
+        	android:layout_marginLeft="5dp" >
+        	
+			<TextView
+            	android:id="@+id/tvPercentage"
+            	android:layout_weight="1"
+            	android:layout_width="fill_parent"
+            	android:layout_height="wrap_content">
+        	</TextView>
+        	
+			<TextView 
+			    style="@style/LinkLike"
+			    android:id="@+id/tvSetPercentage"
+				android:layout_weight="1"
+				android:layout_width="fill_parent"
+            	android:layout_height="wrap_content"
+            	android:text="@string/string_set_new_critical_level"
+            	android:clickable="true"
+            	android:autoLink="all" >
+			</TextView>				            	
+		</LinearLayout>
+		
+		<View style="@style/InvisibleDivider" />
+		
+		<View style="@style/Divider"/>
+        
+        <View style="@style/InvisibleDivider" />
+        
+        <TextView
+            style="@style/Header"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/string_send_to" >
+        </TextView>
+        
+        <AutoCompleteTextView
+        	android:id="@+id/fieldSendTo"
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:layout_marginLeft="5dp">
+    	</AutoCompleteTextView>
+    	
+        <View style="@style/InvisibleDivider" />
+		
+		<View style="@style/Divider"/>
+        
+        <View style="@style/InvisibleDivider" />
+        
+        <TextView
+            style="@style/Header"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/string_service_state" >
+        </TextView>
+		
+        <Switch
+        	android:id="@+id/swServiceState"
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:layout_marginLeft="5dp"
+        	android:text="@string/string_slide_to_change" />
+		
+        <View style="@style/InvisibleDivider" />
+		
+		<View style="@style/Divider"/>
+        
+    	<View style="@style/InvisibleDivider" />
+        
+    </LinearLayout>
+
+ 	
+ 	
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/toggleButtonStart"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
+        android:layout_below="@+id/linLayout">
+    </ProgressBar>
 
-    <ToggleButton
-        android:id="@+id/toggleButtonStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/spinnerAccounts"
-        android:layout_centerHorizontal="true"
-        android:textOff="@string/string_service_is_off"
-        android:textOn="@string/string_service_is_on" />
 
-    <AutoCompleteTextView
-        android:id="@+id/fieldSendTo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/fieldPercentageAlarm"
-        android:layout_below="@+id/progressBar"
-        android:layout_marginTop="14dp"
-        android:ems="10" >
-
-        <requestFocus />
-    </AutoCompleteTextView>
 
 </RelativeLayout>
