--- a/BatteryAlarm/res/layout/autocomplete_view.xml
+++ b/BatteryAlarm/res/layout/autocomplete_view.xml
@@ -1,32 +1,39 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView 
+    <TextView
         android:id="@+id/cntName"
         android:layout_width="fill_parent"
-        android:layout_height="25sp"
+        android:layout_height="40sp"
         android:padding="5dp"
-        android:textSize="14sp"    
-        />
+        android:textSize="20sp"
+        android:textColor="@android:color/primary_text_dark" />
     
-    <TextView 
-        android:id="@+id/cntEmail"
-        android:layout_width="fill_parent"
-        android:layout_height="25sp"
-        android:padding="5dp"
-        android:textSize="14sp" 
-        android:textColor="@color/translucent_red"   
-        />
-    
-    <TextView
-        android:id="@+id/cntType"
-        android:layout_width="fill_parent"
-        android:layout_height="25sp"
-        android:padding="5dp"
-        android:text="tr"
-        android:textSize="14sp" 
-        android:textColor="@color/translucent_red"/>
+    <LinearLayout 
+		android:layout_width = "fill_parent" 
+		android:layout_height = "wrap_content" 
+		android:layout_below="@+id/cntName"
+		android:orientation="horizontal"
+		android:weightSum = "4">
+            <TextView
+                android:id="@+id/cntEmail"
+                android:layout_width = "fill_parent"
+                android:layout_height = "wrap_content"
+                android:textColor="@android:color/background_dark"
+        		android:textSize="14sp" 
+                android:layout_weight = "1"
+            />
+            <TextView
+                android:id="@+id/cntType"
+                android:layout_width = "fill_parent"
+                android:layout_height = "wrap_content"
+                android:textColor="@android:color/secondary_text_light_nodisable"
+        		android:textSize="14sp"
+                android:layout_weight = "3"
+            />
+     </LinearLayout>
 
-</LinearLayout>
+  
+</RelativeLayout>
