--- a/BatteryAlarm/res/values/styles.xml
+++ b/BatteryAlarm/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -16,5 +16,27 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="Divider">
+    	<item name="android:layout_width">match_parent</item>
+    	<item name="android:layout_height">1dp</item>
+    	<item name="android:background">?android:attr/listDivider</item>
+	</style>
+	
+    <style name="InvisibleDivider">
+    	<item name="android:layout_width">match_parent</item>
+    	<item name="android:layout_height">13dp</item>
+    	<item name="android:background">@android:color/transparent</item>
+	</style>
+    
+    <style name="Header">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    
+	<style name="LinkLike">
+        <item name="android:textColor">@android:color/holo_blue_dark</item>
+    </style>
+    
 
 </resources>
