loads of changes

--- a/BatteryAlarm/res/layout/activity_main.xml
+++ b/BatteryAlarm/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,12 +15,30 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <TextView
-            style="@style/Header"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/string_connect_as" >
-        </TextView>
+        <LinearLayout 
+            android:id="@+id/linLayoutConnect"
+        	android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:orientation="horizontal">
+        	
+        	<TextView
+            	style="@style/Header"
+            	android:layout_width="fill_parent"
+            	android:layout_height="wrap_content"
+            	android:text="@string/string_connect_as"
+        		android:layout_weight="1">
+        	</TextView>
+        	
+			<TextView
+            	android:id="@+id/tvConnected"
+            	android:layout_width="fill_parent"
+            	android:layout_height="wrap_content"
+            	android:clickable="true"
+            	android:gravity="right|center_vertical"
+        		android:layout_weight="1">
+        	</TextView>
+        		
+        </LinearLayout>
 
         <Spinner
             android:id="@+id/spinnerAccounts"
@@ -37,60 +55,50 @@
         
         <View style="@style/InvisibleDivider" />
                 
-		<TextView
-            style="@style/Header"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/string_battery_level" >
-        </TextView>
-        
-		<View style="@style/InvisibleDivider" />
-		
-		<LinearLayout
-		    android:id="@+id/btrLvlLayout"
-        	android:layout_width="fill_parent"
-        	android:layout_height="wrap_content"
-        	android:orientation="horizontal"
-        	android:layout_marginLeft="5dp" >
-        	
+		<LinearLayout 
+		    android:id="@+id/linLayoutBatteryLevel"
+		    android:orientation="vertical"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content">
+			
 			<TextView
-            	android:id="@+id/tvPercentage"
-            	android:layout_weight="1"
+            	style="@style/Header"
             	android:layout_width="fill_parent"
-            	android:layout_height="wrap_content">
-        	</TextView>
-        	
-			<TextView 
-			    style="@style/LinkLike"
-			    android:id="@+id/tvSetPercentage"
-				android:layout_weight="1"
-				android:layout_width="fill_parent"
             	android:layout_height="wrap_content"
-            	android:text="@string/string_set_new_critical_level"
-            	android:clickable="true"
-            	android:autoLink="all" >
-			</TextView>				            	
-		</LinearLayout>
-		
-		<View style="@style/InvisibleDivider" />
-		
-		<View style="@style/Divider"/>
-        
+            	android:text="@string/string_battery_level" >
+        	</TextView><View style="@style/InvisibleDivider" />
+
+        	<TextView
+            	android:id="@+id/tvSetPercentage"
+            	android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="10dp"
+	            android:autoLink="all"
+	            android:clickable="true">
+	        </TextView>
+        </LinearLayout>
+
         <View style="@style/InvisibleDivider" />
-        
-        <TextView
+
+        <View style="@style/Divider" />
+
+        <View style="@style/InvisibleDivider" />
+		
+		<TextView
             style="@style/Header"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/string_send_to" >
         </TextView>
         
-        <AutoCompleteTextView
-        	android:id="@+id/fieldSendTo"
-        	android:layout_width="fill_parent"
-        	android:layout_height="wrap_content"
-        	android:layout_marginLeft="5dp">
-    	</AutoCompleteTextView>
+        <MultiAutoCompleteTextView
+            android:id="@+id/fieldSendTo"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:labelFor="@+id/fieldSendTo" >
+
+    	</MultiAutoCompleteTextView>
     	
         <View style="@style/InvisibleDivider" />
 		
@@ -118,18 +126,24 @@
         
     	<View style="@style/InvisibleDivider" />
         
+    
+
+	    <ProgressBar
+	        android:id="@+id/progressBar"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal">
+	    </ProgressBar>
+	    
+	    <TextView
+	        android:id="@+id/tvCustomMessages"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center_horizontal">
+	     </TextView>
+
     </LinearLayout>
-
- 	
- 	
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/linLayout">
-    </ProgressBar>
+  
 
 
-
-</RelativeLayout>
+</ScrollView>
